# factor

./: .env.example  .gitignore  DEVELOPMENT.md  electron-builder.yml  implementation_plan.md  package-lock.json  package.json  task.md
.claude/: settings.local.json
apps/desktop/: package.json
apps/desktop/src/: main.ts  preload.ts  sidecar.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts  types.ts
apps/web/src/components/: ConfigModal.tsx  DiffView.tsx
apps/web/src/routes/: AiImprove.tsx  BatchAiImprove.tsx  BatchForm.tsx  BatchPreview.tsx  GenerationReview.tsx  SettingsManager.tsx  (+3 more)
scripts/: build-sidecar.js
services/sidecar/: batch_final.json  batch_result.json  batch_result3.json  build_sidecar.spec  fix_images.py  generate_batch_payload.json  pyproject.toml  rebuild_ti_template.py
services/sidecar/sidecar/: config.py  db.py  main.py  repo.py
services/sidecar/sidecar/ai_providers/: base.py  claude.py  gemini.py  groq.py  ollama.py  openai_provider.py
services/sidecar/sidecar/diffing/: word_diff.py
services/sidecar/sidecar/generation/: builtin_templates.py  context_keys.py  docx_render.py  docx_template_builder.py
services/sidecar/sidecar/models/: generated_report.py  perito.py  report_input.py  template.py
services/sidecar/sidecar/parsing/: __init__.py  header_footer_extract.py  image_detect.py  orchestrator.py  pdf_extract.py  section_detect.py  text_utils.py  variable_detect.py
services/sidecar/sidecar/routers/: ai.py  config_router.py  peritos.py  reports.py  templates.py  uploads.py
(+2 files in other folders)
